# jr-trapezoid

./: README.md  environment.yml  meta.yaml  pyproject.toml  setup.cfg  setup.py
jr_trapezoid/: __init__.py  trapezoid.py
src/jr_trapezoid/: __init__.py  trapezoid.py
tests/: test_trapezoid.py
