[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jr-trapezoid"
version = "0.0.1"
dependencies = [
    "numpy",
    
]
requires-python = ">=3.7"
authors = [
    {name = "Jørgen Riseth", email="jnriseth@gmail.com"}
]
description = "Numerical 1D integration by trapzeoid for the purpose of learning conda packaging."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

[tool.setuptools]
package-dir = { "" = "src" }
